Tini Website: mobile overflow fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -24,8 +24,9 @@ a{
 a:hover{
     color: var(--twisted);
 }
-body{
-    overflow-x:hidden ;
+html,body{
+    overflow-x:hidden;
+    max-width: 100vw;
 }
 h3{
     font-size: 24px;
